fixed: Avatar blurr

--- a/client/src/components/Avatar/Avatar.module.scss
+++ b/client/src/components/Avatar/Avatar.module.scss
@@ -2,4 +2,9 @@
   border-radius: 50%;
   object-fit: cover;
   object-position: center center;
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
 }
